--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,10 @@ on:
 
 jobs:
   test:
-    runs-on: [macos-12, ubuntu-22.04, windows-2022]
+    strategy:
+      matrix:
+        os: [macos-12, ubuntu-22.04, windows-2022]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - name: Configure
