--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Configure
-        run: cmake -Stinyshell -Btinyshell/build
+        run: cmake -Stinyshell -Btinyshell/build -DCMAKE_BUILD_TYPE=Release
       - name: Build
-        run: cmake --build tinyshell/build
+        run: cmake --build tinyshell/build --config Release -j 2
       - name: Test
         working-directory: tinyshell/build
-        run: ctest
+        run: ctest -C Release
