--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
         run: cmake --build tinyshell/build --config Debug -j 2
       - name: Test
         working-directory: tinyshell/build
-        run: ctest -C Debug
+        run: ctest -C Debug -T memcheck
