only run memcheck on platforms that with valgrind

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - name: Install valgrind
+        run: apt install valgrind
+        if: matrix.os == 'ubuntu-22.04'
+      - name: Install valgrind
+        run: brew install valgrind
+        if: matrix.os == 'macos-12'
       - name: Configure
         run: cmake -Stinyshell -Btinyshell/build -DCMAKE_BUILD_TYPE=Debug
       - name: Build
         run: cmake --build tinyshell/build --config Debug -j 2
       - name: Test
         working-directory: tinyshell/build
+        run: ctest -C Debug
+        if: matrix.os == 'windows-2022'
+      - name: Test (with memcheck)
+        working-directory: tinyshell/build
         run: ctest -C Debug -T memcheck
+        if: matrix.os != 'windows-2022'
