--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,6 @@ jobs:
       - name: Install valgrind
         run: sudo apt-get install valgrind
         if: matrix.os == 'ubuntu-22.04'
-      - name: Install valgrind
-        run: brew install valgrind
-        if: matrix.os == 'macos-12'
       - name: Configure
         run: cmake -Stinyshell -Btinyshell/build -DCMAKE_BUILD_TYPE=Debug
       - name: Build
@@ -29,8 +26,8 @@ jobs:
       - name: Test
         working-directory: tinyshell/build
         run: ctest -C Debug
-        if: matrix.os == 'windows-2022'
+        if: matrix.os != 'ubuntu-22.04'
       - name: Test (with memcheck)
         working-directory: tinyshell/build
         run: ctest -C Debug -T memcheck
-        if: matrix.os != 'windows-2022'
+        if: matrix.os == 'ubuntu-22.04'
