fix memcheck command options not having exit code

--- a/tinyshell/CMakeLists.txt
+++ b/tinyshell/CMakeLists.txt
@@ -31,8 +31,8 @@ add_executable(tinyshell main.c)
 target_link_libraries(tinyshell PUBLIC libtinyshell)
 
 enable_testing()
+set(MEMORYCHECK_COMMAND_OPTIONS "--leak-check=full --error-exitcode=1")
 include(CTest)
-set(MEMORYCHECK_COMMAND_OPTIONS "--error-exitcode=1")
 
 message(${tinyshell_TESTS})
 foreach(TEST_FILE ${tinyshell_TESTS})
