--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         run: sudo apt-get install valgrind
         if: matrix.os == 'ubuntu-22.04'
       - name: Configure
-        run: cmake -Stinyshell -Btinyshell/build -DCMAKE_BUILD_TYPE=Debug -DCI_TEST=ON -DROOT_TEST=${{ github.workspace }}
+        run: cmake -Stinyshell -Btinyshell/build -DCMAKE_BUILD_TYPE=Debug -DCI_TEST=ON -DROOT_TEST="${{ github.workspace }}/tinyshell"
       - name: Build
         run: cmake --build tinyshell/build --config Debug -j 2
       - name: Test
